--- a/amazon-Copy1.ipynb
+++ b/amazon-Copy1.ipynb
@@ -602,37 +602,22 @@
   {
    "cell_type": "markdown",
    "id": "eh0n6rqcto4",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
     "---\n",
     "\n",
     "## 3. Modeling Approach\n",
     "\n",
     "### Problem Formulation\n",
-    "**Input**: Review text (combined title + review body)  \n",
-    "**Output**: Rating class ∈ {1, 2, 3, 4, 5}  \n",
-    "**Objective**: Minimize classification error (maximize accuracy)\n",
+    "To formulate our task as a machine learning problem, we treat each combined review text, which includes both the title and the body, as the input. The goal is to predict a rating from one to five, so the output is a discrete class label. The objective of the model is to minimize classification error and, in practice, to maximize accuracy on held-out data. For this task, logistic regression paired with TF-IDF features is an appropriate and effective choice.\n",
     "\n",
-    "### Model Selection: Logistic Regression with TF-IDF\n",
+    "### Model: Logistic Regression with TF-IDF\n",
     "\n",
-    "**Why Logistic Regression?**\n",
+    "Logistic regression offers several benefits for text-based prediction. It is easy to interpret because the learned coefficients reveal which words contribute most strongly to each rating class. It is also computationally efficient and scales well to large datasets, which is important given that we work with millions of reviews. The model has a long track record of success as a baseline in text classification, and it produces probabilistic outputs that indicate the model’s confidence in each prediction. It also performs reasonably well even without extensive hyperparameter tuning, which simplifies experimentation.\n",
     "\n",
-    "**Advantages**:\n",
-    "1. **Interpretability**: Coefficients directly indicate word importance for each rating class\n",
-    "2. **Computational Efficiency**: Scales well to large datasets (2M+ reviews)\n",
-    "3. **Proven Effectiveness**: Standard baseline for text classification tasks\n",
-    "4. **Probabilistic Output**: Provides confidence scores, not just hard classifications\n",
-    "5. **No hyperparameter tuning needed**: Relatively robust to default settings\n",
+    "However, logistic regression has some limitations. It relies on a linear decision boundary and therefore cannot model more complex or non-linear patterns in language. It treats each word independently, so it ignores word order and broader contextual meaning. Because TF-IDF creates a very high-dimensional feature space, especially with a vocabulary of fifty thousand terms, the model can overfit without proper regularization. Finally, it lacks true semantic understanding and cannot naturally account for synonyms or paraphrased expressions. Despite these limitations, logistic regression serves as a strong and reliable baseline for our predictive task.\n",
     "\n",
-    "**Disadvantages**:\n",
-    "1. **Linear Decision Boundary**: Cannot capture complex non-linear relationships\n",
-    "2. **Independence Assumption**: Treats words as independent (ignores word order/context)\n",
-    "3. **High Dimensionality**: With 50K features, may overfit without regularization\n",
-    "4. **Limited Semantic Understanding**: Cannot capture synonyms or paraphrases\n",
-    "\n",
-    "### Alternative Approaches Considered\n",
+    "**Alternative Models**\n",
     "\n",
     "| Model | Advantages | Disadvantages | Why Not Used |\n",
     "|-------|-----------|---------------|--------------|\n",
@@ -641,27 +626,9 @@
     "| **Neural Networks (LSTM/BERT)** | Captures context, word order, semantics | Requires GPU, long training time, less interpretable | Beyond scope; would be interesting future work |\n",
     "| **SVM** | Good for high-dim spaces | O(n²) training complexity | Too slow for 2M samples |\n",
     "\n",
-    "### Feature Engineering: TF-IDF\n",
+    "**Feature Engineering: TF-IDF**\n",
     "\n",
-    "**Term Frequency-Inverse Document Frequency (TF-IDF)**:\n",
-    "- Weighs words by importance: common words (the, and) get low weight\n",
-    "- Rare but informative words (broken, amazing) get high weight\n",
-    "- Formula: `tfidf(t,d) = tf(t,d) × log(N / df(t))`\n",
-    "\n",
-    "**Our Configuration**:\n",
-    "```python\n",
-    "TfidfVectorizer(\n",
-    "    ngram_range=(1, 2),  # Unigrams + bigrams (e.g., \"not good\")\n",
-    "    min_df=2,             # Ignore words appearing in < 2 documents\n",
-    "    max_features=50000    # Keep top 50K features by importance\n",
-    ")\n",
-    "```\n",
-    "\n",
-    "**Why bigrams?**  \n",
-    "Captures negation and phrases: \"not good\" vs \"good\", \"highly recommend\" vs \"recommend\"\n",
-    "\n",
-    "**Why max 50K features?**  \n",
-    "Balance between expressiveness and computational cost. Full vocabulary would be 500K+ features."
+    "To represent the review text numerically, we use Term Frequency–Inverse Document Frequency, which assigns higher weight to informative words and lower weight to very common terms that do not contribute much meaning. The TF-IDF value for a term depends on how often it appears in a particular document and how rare it is across the full collection of documents. In practice, this helps highlight words such as “broken” or “amazing,” while down-weighting words like “the” or “and.” Our configuration uses a TF-IDF vectorizer with both unigrams and bigrams, ignores terms that appear in fewer than two documents, and limits the vocabulary to fifty thousand features. Bigrams are included because they capture short phrases and simple forms of context, such as distinguishing “not good” from “good” or identifying expressions like “highly recommend.” The feature limit of fifty thousand provides a practical compromise that keeps the representation expressive without letting the vocabulary grow to several hundred thousand terms, which would make training slower and more memory intensive."
    ]
   },
   {
@@ -834,15 +801,9 @@
    "source": [
     "### Model Training Configuration\n",
     "\n",
-    "**Logistic Regression Hyperparameters**:\n",
-    "- `solver='newton-cg'`: Second-order optimization method (faster convergence for large datasets)\n",
-    "- `max_iter=1000`: Maximum iterations (ensures convergence)\n",
-    "- Default L2 regularization (`C=1.0`): Prevents overfitting on 50K features\n",
+    "For training, we use logistic regression with a configuration that is well suited to large text datasets. The model uses the newton-cg solver, which is a second-order optimization method that converges efficiently when working with high-dimensional TF-IDF features. We set the maximum number of iterations to one thousand to ensure that the optimization process reaches convergence. The default L2 regularization with a strength of one helps prevent overfitting, which is important because the feature space contains fifty thousand terms.\n",
     "\n",
-    "**Training Process**:\n",
-    "- Fit on 85% of data (~1.8M samples)\n",
-    "- One-vs-Rest (OvR) strategy for multi-class: 5 binary classifiers (one per rating)\n",
-    "- Each classifier learns: P(rating=k | text features)"
+    "The model is trained on eighty five percent of the dataset, which corresponds to roughly one point eight million samples. Since logistic regression is inherently a binary classifier, we use a one-vs-rest strategy to handle the five rating classes. This creates five separate classifiers, each responsible for predicting the probability that a given review belongs to a particular rating. Each classifier learns to estimate the likelihood of its target rating based on the TF-IDF features extracted from the review text."
    ]
   },
   {
