fixed ordering and fixed section 4

--- a/amazon-Copy1.ipynb
+++ b/amazon-Copy1.ipynb
@@ -816,11 +816,25 @@
     "- **Precision**: Of reviews predicted as k-stars, what % are actually k-stars?\n",
     "- **Recall**: Of all actual k-star reviews, what % did we find?\n",
     "- **F1-Score**: Harmonic mean balancing precision and recall\n",
-    "- **Confusion Matrix**: Shows which ratings are commonly confused\n",
+    "- **Confusion Matrix**: Shows which ratings are commonly confused"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "klvta57ixmf",
+   "metadata": {},
+   "source": [
+    "### Baseline Performance\n",
     "\n",
-    "### Baseline Comparisons\n",
-    "\n",
-    "Let's establish baselines before examining our model's performance:"
+    "Two simple baselines help contextualize the performance of our model. The first is a majority class baseline that always predicts a five star rating. Because five star reviews make up roughly sixty five percent of the dataset, this baseline already achieves an accuracy of about sixty five percent, which is surprisingly strong and highlights the severity of the class imbalance. The second baseline is a random predictor that selects a rating according to the overall class distribution. This approach typically reaches an accuracy between forty five and fifty percent. For our model to demonstrate meaningful learning, it must perform noticeably better than both of these baselines, not only in overall accuracy but also in its ability to predict the minority classes more effectively."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1641c9db-0b4c-4ae7-ae06-9f6cd975e914",
+   "metadata": {},
+   "source": [
+    "### Baseline Comparisons"
    ]
   },
   {
@@ -889,48 +903,11 @@
    "source": [
     "### Results Analysis\n",
     "\n",
-    "**Performance Summary** (from classification report above):\n",
-    "- **Overall Accuracy**: Check the output above for exact value\n",
-    "- Likely in the range of 60-75% based on similar text classification tasks\n",
+    "The overall accuracy of the model can be read directly from the classification report and is expected to fall somewhere between sixty and seventy five percent, which is typical for TF-IDF based text classification on large review datasets. The per class results show clear patterns. Five star reviews usually achieve the highest recall because they make up the bulk of the training data. One star reviews often show strong precision because negative language is more distinctive, although recall may still be limited. The middle classes, especially two, three, and four stars, are the most difficult to predict because their language is more neutral or ambiguous and overlaps more heavily with both positive and negative reviews.\n",
     "\n",
-    "**Per-Class Performance Observations**:\n",
+    "The confusion matrix helps illustrate these effects. Most predictions fall along the diagonal, indicating correct classification, but mistakes tend to occur between neighboring classes. For example, four star reviews may be misclassified as five stars more often than as one star. This pattern reflects the gradual nature of sentiment in written reviews. The matrix also commonly shows a tilt toward predicting five star ratings, which is a direct consequence of the class imbalance in the dataset.\n",
     "\n",
-    "Looking at the classification report:\n",
-    "1. **5-star reviews** (majority class): Likely highest recall due to abundance of training examples\n",
-    "2. **1-star reviews**: Should have good precision (distinct negative language) but may have lower recall\n",
-    "3. **2-3-4 star reviews**: Most challenging - these \"middle\" ratings have more ambiguous language\n",
-    "\n",
-    "**Confusion Matrix Insights**:\n",
-    "\n",
-    "The confusion matrix reveals:\n",
-    "- **Diagonal dominance**: Correct predictions should be most common\n",
-    "- **Adjacent errors**: Model likely confuses neighboring ratings (4-star ↔ 5-star) more than distant ones (1-star ↔ 5-star)\n",
-    "- **Skew toward 5-star**: Model may over-predict 5-stars due to class imbalance\n",
-    "\n",
-    "**Distribution Comparison**:\n",
-    "The bar chart comparing true vs predicted distributions shows whether our model:\n",
-    "- **Maintains class distribution**: Good generalization\n",
-    "- **Over-predicts majority class**: Sign of bias toward 5-stars\n",
-    "- **Under-predicts minority classes**: Common issue with imbalanced data"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "klvta57ixmf",
-   "metadata": {},
-   "source": [
-    "### Baseline Performance\n",
-    "\n",
-    "Before training our model, let's establish baseline comparisons:\n",
-    "\n",
-    "**1. Majority Class Baseline**: Always predict 5 stars\n",
-    "- Expected accuracy: ~65% (proportion of 5-star reviews)\n",
-    "- This is surprisingly strong due to class imbalance\n",
-    "\n",
-    "**2. Random Baseline**: Predict according to class distribution\n",
-    "- Expected accuracy: ~45-50%\n",
-    "\n",
-    "**Our model must significantly outperform these baselines to demonstrate learning.**"
+    "The comparison between the true and predicted rating distributions provides another perspective on model performance. If the predicted distribution closely follows the true distribution, it suggests that the model generalizes well across all classes. However, if the model predicts far too many five star ratings or disproportionately few low ratings, it indicates that the imbalance is influencing its behavior. This type of comparison helps identify whether the model is learning meaningful patterns or simply leaning toward the majority class."
    ]
   },
   {
